--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -45,7 +45,7 @@ jobs:
         chmod +x ./gradlew
         ./gradlew build
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:latest
+      run: docker buildx build --platform linux/amd64 . --file Dockerfile --tag ${{ env.DOCKER_IMAGE_NAME }}:latest
 
     - name: Login to Docker Hub using Access Token
       run: echo "${{ secrets.DOCKER_HUB_TOKEN }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
