--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -1,11 +1,11 @@
 name: CICD TO EC2
 
 on: 
-  #pull_request: 
-  # types: [ "closed" ]
-  # branches: [ "dev" ]
-  push:
-    branches : ["dev"]
+  pull_request: 
+    types: [ "closed" ]
+    branches: [ "dev" ]
+ # push:
+   # branches : ["dev"]
 
 permissions:
   contents: read
