--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -71,3 +71,4 @@ jobs:
           docker stop server
           docker rm server
           docker run -d --name server -p 8080:8080 ${{ secrets.DOCKER_IMAGE_NAME }}
+          docker image prune
