--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,9 @@ dependencies {
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // 타입 역질렬화
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-joda:2.15.4' // Jackson 버전에 맞게 수정
+
 }
 
 tasks.named('test') {
