--- a/build.gradle
+++ b/build.gradle
@@ -70,7 +70,10 @@ dependencies {
     //redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
-
+    // Hibernate 2차 캐시
+    implementation 'org.ehcache:ehcache:3.10.8' // Ehcache 3.x
+    implementation 'javax.cache:cache-api:1.1.1' // JCache (JSR-107) API 의존성
+    implementation 'org.hibernate.orm:hibernate-jcache:6.1.7.Final' // Hibernate와 JCache 통합 모듈 (Hibernate 6.x)
 }
 
 tasks.named('test') {
