--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -70,5 +70,6 @@ jobs:
           docker pull ${{ env.DOCKER_IMAGE_NAME }}
           docker stop server
           docker rm server
+          docker image prune -f
           docker run -d --name server -p 8080:8080 ${{ secrets.DOCKER_IMAGE_NAME }}
-          docker image prune
+          
